# voice-assistant

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  main.rs  speech.rs  voice_detection.rs
