[package]
name = "voice_assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
hound = "3.5"
rodio = "0.17"  # For audio playback

tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }

anyhow = "1.0"
dotenv = "0.15"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

whisper-rs = "0.10.0"  # Rust bindings for Whisper
symphonia = { version = "0.5.3", features = ["mp3", "wav"] }  # Audio decoding
